<resources>
    <!-- General -->
    <string name="app_name">Session Timer</string>

    <!-- UI Elements -->
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_settings">Settings</string>
    <string name="button_stats">Statistics</string>
    <string name="add_to_gcal">Add to GCal</string>
    <string name="chip_worksession" translatable="false">Work Session</string>
    <string name="chip_study" translatable="false">Studying</string>
    <string name="chip_chillout" translatable="false">Chill Out</string>
    <string name="chip_atoffice" translatable="false">At Office</string>

    <!-- Titles -->
    <string name="title_chooseCalAcc">Please choose your Calendar Account</string>
    <string name="title_noPermissionGiven">This app won´t work without the necessary permissions</string>
    <string name="title_noGoogleAccount">This app won´t work without a Google Calendar account</string>

    <!-- Preference Titles -->
    <string name="calendars_header">Calendars</string>
    <string name="theme_header" translatable="false">Theme</string>

    <!-- Calendars Preferences -->


    <!-- Theme Preferences -->
    <string name="theme_entry_sysdefault">System Default</string>
    <string name="theme_choose">Choose Theme</string>

    <!-- Generic Verbs -->
    <string name="gen_choose">choose</string>

</resources>