<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/calendars_header">

        <ListPreference
            app:key="calendars"
            app:title="@string/calendars_header"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme_header">

        <ListPreference
            android:key="themes"
            android:title="@string/theme_choose"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="@string/theme_entry_sysdefault"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            app:key="feedback"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features"/>

    </PreferenceCategory>

</PreferenceScreen>